Bug 309170 - If a windows is fullscreen the quick (un)maximizing is triggered when Alt+click moving it
Summary: If a windows is fullscreen the quick (un)maximizing is triggered when Alt+cli...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: core (other bugs)
Version First Reported In: 4.9.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-28 21:10 UTC by Kai Uwe Broulik
Modified: 2012-11-14 20:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
thomas.luebking: ReviewRequest+


Attachments
patch preview (3.45 KB, patch)
2012-10-28 21:44 UTC, Thomas Lübking
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2012-10-28 21:10:25 UTC
If you have a fullscreen window and move it using Alt+Left mouse, the quick (un)maximizing is triggered. This is usually not visible but when using the new Maximize effect, you can see that if your window is maximized and then you fullscreen it and move it around, that the maximize animation is triggered.
See Review 107050

Reproducible: Always

Steps to Reproduce:
0. Have the Maximize effect enabled
1. Open a window
2. Maximize it
3. Fullscreen it
4. Press Alt
5. Left click and hold the window
Actual Results:  
The window jumps to its original size and then transitions back to fullscreen

Expected Results:  
Nothing, you can just move the window around to any other screen
Comment 1 Thomas Lübking 2012-10-28 21:44:30 UTC
Created attachment 74857 [details]
patch preview

applied is a patch that omits _all_ special alteration of maximized fullscreen windows (what should be correct, since you can only move the window between screens anyway)
Comment 2 Thomas Lübking 2012-11-13 23:16:33 UTC
https://git.reviewboard.kde.org/r/107317/
Comment 3 Thomas Lübking 2012-11-14 20:33:47 UTC
Git commit cc50c7b974148539fc05558006b830709b445f23 by Thomas Lübking.
Committed on 01/11/2012 at 20:54.
Pushed by luebking into branch 'master'.

don't leave quick tiling for FS windows

REVIEW: 107317

M  +21   -18   kwin/geometry.cpp

http://commits.kde.org/kde-workspace/cc50c7b974148539fc05558006b830709b445f23