don't leave quick tiling for FS windows

REVIEW: 107317
BUG: 309170